# awsome2

./: Cargo.toml  Makefile  workspace.yaml
src/: app.rs  bootstrap_text.rs  error.rs  explore_tab.rs  fonts.rs  icons.rs  lambda_function_details.rs  linear.rs  log_receiver.rs  main.rs  main_tab.rs  message.rs  pane_type.rs  profiles.rs  project_service_selector.rs  projects_tab.rs  regions.rs  resource.rs  resources_table.rs  service.rs  splitter.rs  state.rs  styles.rs  workspace.rs
src/models/: mod.rs  profile.rs  region.rs  resource.rs
src/models/workspace/: appearance.rs  mod.rs  project.rs  resource_descriptor.rs
src/resource_details/: lambda_function_details.rs  mod.rs  s3_bucket_details.rs
src/view/: bootstrap_text.rs  easing.rs  fonts.rs  footer.rs  icons.rs  linear.rs  main_tab.rs  mod.rs  styles.rs
src/view/explore_tab/: mod.rs
src/view/projects_tab/: mod.rs  project_service_selector.rs
src/view/resource_details/: lambda_function_details.rs  mod.rs  s3_bucket_details.rs
src/view/resources_table/: mod.rs
src/workspace/: mod.rs  project.rs  resource.rs  resource_descriptor.rs
