[package]
name = "awsome"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.4"
aws-sdk-ec2 = "1.59.0"
aws-sdk-lambda = "1.37.0"
aws-sdk-s3 = "1.42.0"
aws-smithy-runtime-api = { version = "1.7.0", features = ["client"] }
clap = { version = "4.5.7", features = ["derive"] }
directories = "5.0.1"
iced = { version = "0.13.1", features = ["tokio"] }
iced_aw = { version = "0.11.0" }
iced_futures = "0.13.2"
iced_table = "0.13.0"
lazy_static = "1.5.0"
lyon_algorithms = "1.0.4"
num-traits = "0.2.19"
once_cell = "1.19.0"
regex = "1.10.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_yaml = "0.9.34"
tracing = "0.1.40"
ulid = "1.1.3"
